# C-Codedump

./: README.md  utest.c
Alquimias/: README.md
Assemble/: hello  hello.s
GotoOnly/: main.c
LeetCode/: NewProblem  NewProblem.c  NovoProblema.py  a.out
My LIbs/Linked List/: CMakeLists.txt  Makefile
My LIbs/Linked List/src/: LinkedList.h
Numeros Complexos/: main.c
Old Projects/Tager Prototipos/Tager-Assembler/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Tager
Old Projects/Tager Prototipos/Tager-Assembler/.cache/clangd/index/: Files.c.7FC509D31498BAC4.idx  Files.h.FBDFBEC6CA743944.idx  Strings.c.0A59291517F333B6.idx  Strings.h.4A9077D96FAE7B9B.idx  Tager.c.6171E7A33EDFE18D.idx  labels_list.c.39D113321B3B9D31.idx  labels_list.h.E35C3EDC3C8BF805.idx  linked_list.c.3BF40CDA76299E9E.idx  linked_list.h.9F9EEEDAB0249579.idx  sintaxes.c.DF262D883B0DE63D.idx  sintaxes.h.AD9FB3A88F83DCCD.idx
Old Projects/Tager Prototipos/Tager-Assembler/Test Files/: test1.txt  test2.txt  test_label_to_line.txt  test_new_label.txt  test_sintaxe_2_r_1_v.txt  test_sintaxe_2_regs.txt  test_sintaxe_3_regs.txt  test_sintaxe_nea.txt
Old Projects/Tager Prototipos/Tager-Assembler/src/: Tager.c
Old Projects/Tager Prototipos/Tager-Assembler/src/Files/: Files.c  Files.h
Old Projects/Tager Prototipos/Tager-Assembler/src/Linked List/: labels_list.c  labels_list.h  linked_list.c  linked_list.h
Old Projects/Tager Prototipos/Tager-Assembler/src/Sintaxes/: sintaxes.c  sintaxes.h
Old Projects/Tager Prototipos/Tager-Assembler/src/Strings/: Strings.c  Strings.h
Semafaros/: count  (+1 more)
(+162 files in other folders)
